--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
+    "immer": "^10.1.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "three": "^0.167.1"
+    "three": "^0.167.1",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "eslint": "^8",
